도구 로그 업데이트

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   </div>
   <div id="editor" contenteditable="true" autofocus></div>
   <div id="link-previews"></div>
+  <div id="tool-log"></div>
   <div id="statusbar"></div>
 
   <!-- 전달 팝업 -->
