--- a/settings.html
+++ b/settings.html
@@ -67,11 +67,21 @@
         <div id="toolsMainPage" class="tools-page">
           <button class="tool-add-btn" id="openToolsListBtn">+ 도구 추가</button>
 
-          <div class="option">
+          <div class="option no-border">
             <label>
               <span>시작 시 자동 실행</span>
               <input type="checkbox" id="autoLaunch">
             </label>
+          </div>
+
+          <div class="option">
+            <div class="option-content">
+              <label>
+                <span>알림 활성화</span>
+                <input type="checkbox" id="notificationEnabled">
+              </label>
+              <small class="option-hint">체크박스 리마인더 알림을 활성화합니다</small>
+            </div>
           </div>
 
           <div class="shortcut-group">
