--- a/settings.html
+++ b/settings.html
@@ -17,14 +17,38 @@
     <!-- 왼쪽: 메뉴 목록 -->
     <nav id="sidebar">
       <div class="nav-item active" data-section="general">일반</div>
-      <div class="nav-item" data-section="snippets">단축어</div>
-      <div class="nav-item" data-section="tools">도구</div>
+      <div class="nav-item" data-section="snippets">
+        단축어
+        <span class="nav-lock-icon" id="snippetsLock">
+          <svg viewBox="0 0 512 512" fill="currentColor">
+            <path d="M400,188h-36v-82c0-58-48-106-108-106S148,48,148,106v82h-36c-33,0-60,27-60,60v204c0,33,27,60,60,60h288c33,0,60-27,60-60V248C460,215,433,188,400,188z M188,106c0-36,30-66,68-66s68,30,68,66v82H188V106z"/>
+          </svg>
+        </span>
+      </div>
+      <div class="nav-item" data-section="tools">
+        도구
+        <span class="nav-lock-icon" id="toolsLock">
+          <svg viewBox="0 0 512 512" fill="currentColor">
+            <path d="M400,188h-36v-82c0-58-48-106-108-106S148,48,148,106v82h-36c-33,0-60,27-60,60v204c0,33,27,60,60,60h288c33,0,60-27,60-60V248C460,215,433,188,400,188z M188,106c0-36,30-66,68-66s68,30,68,66v82H188V106z"/>
+          </svg>
+        </span>
+      </div>
     </nav>
 
     <!-- 오른쪽: 내용 -->
     <main id="content">
       <!-- 단축어 섹션 -->
       <div class="section" id="section-snippets">
+        <!-- 로그인 필요 오버레이 -->
+        <div class="login-required-overlay" id="snippetsOverlay">
+          <div class="login-required-content">
+            <svg viewBox="0 0 512 512" fill="currentColor" class="lock-icon-large">
+              <path d="M400,188h-36v-82c0-58-48-106-108-106S148,48,148,106v82h-36c-33,0-60,27-60,60v204c0,33,27,60,60,60h288c33,0,60-27,60-60V248C460,215,433,188,400,188z M188,106c0-36,30-66,68-66s68,30,68,66v82H188V106z"/>
+            </svg>
+            <p>로그인이 필요합니다</p>
+            <button type="button" class="btn-login-overlay" id="snippetsLoginBtn">로그인</button>
+          </div>
+        </div>
         <!-- 단축어 목록 -->
         <div id="snippetList"></div>
 
@@ -66,6 +90,16 @@
 
       <!-- 도구 섹션 -->
       <div class="section" id="section-tools">
+        <!-- 로그인 필요 오버레이 -->
+        <div class="login-required-overlay" id="toolsOverlay">
+          <div class="login-required-content">
+            <svg viewBox="0 0 512 512" fill="currentColor" class="lock-icon-large">
+              <path d="M400,188h-36v-82c0-58-48-106-108-106S148,48,148,106v82h-36c-33,0-60,27-60,60v204c0,33,27,60,60,60h288c33,0,60-27,60-60V248C460,215,433,188,400,188z M188,106c0-36,30-66,68-66s68,30,68,66v82H188V106z"/>
+            </svg>
+            <p>로그인이 필요합니다</p>
+            <button type="button" class="btn-login-overlay" id="toolsLoginBtn">로그인</button>
+          </div>
+        </div>
         <!-- 도구 목록 페이지 -->
         <div id="toolsListPage" class="tools-page hidden">
           <button class="back-btn" id="backFromTools">← 뒤로</button>
