--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
       <button id="newBtn" title="새 메모">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
       </button>
+      <div id="notification-bell-container">
+        <button id="notificationBellBtn" title="알림">
+          <svg viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg"><path d="m14 26c-2.2 0-4-1.8-4-4h-3.6c-1.3 0-2.4-1.1-2.4-2.4 0-.6.3-1.3.7-1.7l.9-.9c.3-.3.4-.6.4-1v-4c0-4.1 3.1-7.4 7-7.9v-1.1c0-.6.4-1 1-1s1 .4 1 1v1.1c3.9.5 7 3.9 7 7.9v4c0 .4.1.7.4 1l.9.9c.5.5.7 1.1.7 1.7 0 1.3-1.1 2.4-2.4 2.4h-3.6c0 2.2-1.8 4-4 4zm-2-4c0 1.1.9 2 2 2s2-.9 2-2zm4.8-2h4.7c.2 0 .4-.2.4-.4 0-.1 0-.2-.1-.3l-.8-.9c-.6-.6-1-1.5-1-2.4v-4c0-3.3-2.7-6-6-6s-6 2.7-6 6v4c0 .9-.4 1.8-1 2.4l-.9.9c-.1.1-.1.2-.1.3 0 .2.2.4.4.4h4.7z"/></svg>
+          <span id="notification-badge" class="notification-badge hidden">0</span>
+        </button>
+        <!-- 알림 드롭다운 -->
+        <div id="notification-dropdown" class="notification-dropdown hidden">
+          <div class="notification-dropdown-header">알림</div>
+          <div id="notification-dropdown-list" class="notification-dropdown-list">
+            <!-- 알림 항목들이 여기에 표시됨 -->
+          </div>
+          <div id="notification-dropdown-empty" class="notification-dropdown-empty">
+            새로운 알림이 없습니다
+          </div>
+        </div>
+      </div>
       <button id="closeBtn" title="닫기">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
       </button>
